Implement artist shuffle action (closes #212)